use different @test to run with -XX:-VMContinuations